added configuration info